fix scrollbar on settings pages, and other minor layout issues, too
git-svn-id: file:///home/awy/mirror/slim/trunk/server@14926 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -974,6 +974,14 @@ form#advSearchForm.resultsPage {
 }
 
 /* settings pages */
+body.settings {
+	overflow: auto;
+}
+
+.statusarea {
+	margin: 0 10px;
+}
+
 .settingSection {
 	padding: 0 10px;
 	margin-bottom: 15px;
